kubernetes/argo-cd/projects/aws/production-hm/open-webui/environments/production/kubernetes-manifests/hm-open-webui-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-open-webui-ingress
  namespace: production-hm-open-webui
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: open-webui.hongbomiao.com
  labels:
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/part-of: production-hm-open-webui
spec:
  rules:
    - host: open-webui.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
  tls:
    - hosts:
        - open-webui.hongbomiao.com
      secretName: hm-open-webui-certificate
